# chatrag

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
src/api/: __init__.py
src/api/routes/: __init__.py
src/api/schemas/: __init__.py
src/application/: __init__.py
src/application/graph/: __init__.py
src/application/use_cases/: __init__.py
src/domain/: __init__.py
src/domain/exceptions/: __init__.py
src/domain/models/: __init__.py
src/infrastructure/: __init__.py  config.py
src/infrastructure/llm/: __init__.py
src/infrastructure/vector_store/: __init__.py
