[project]
name = "chatrag"
version = "0.1.0"
description = "Chatbot with RAG using LangChain, LangGraph, Azure AI Search and OpenAI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "langchain>=1.2.3",
  "langchain-openai>=1.1.7",
  "langchain-community>=0.4.1",
  "langgraph>=1.0.6",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.6.0",
  "fastapi[standard]>=0.128.0",
  "azure-search-documents>=11.6.0",
  "azure-identity>=1.25.1",
]
